--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,84 @@
-# Compiled class file
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Gradle (if needed)
+.gradle/
+build/
+!gradle-wrapper.jar
+
+# IDE
+*.iml
+.idea/
+.classpath
+.project
+.settings/
+.vscode/
+
+# ===== NATIVE LIBRARY COMPILATION =====
+
+# Don't commit compiled native libraries
+*.so
+*.dylib
+*.dll
+*.o
+*.obj
+*.a
+*.lib
+*.lo
+*.lai
+
+# Don't commit RE2 source if building locally
+re2/
+re2-build/
+re2-src/
+libre2-src/
+
+# CMake and native build artifacts
+CMakeCache.txt
+CMakeFiles/
+cmake_build/
+.cmake/
+Makefile
+cmake_install.cmake
+*.cmake
+
+# Native build temp directories
+jna-temp/
+extracted-libs/
+extracted-natives/
+temp_native/
+native_build/
+
+# ===== JAVA/CLASS FILES =====
+
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Test output
 hs_err_pid*
 replay_pid*
+
+# ===== OS SPECIFIC =====
+
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# Editor backups
+*.bak
+*.tmp
+
