Add automated native library build system
Build System:
- GitHub Actions workflow that builds RE2 wrapper for all 4 platforms
- Automatically creates PR with compiled binaries
- C wrapper source code (re2_wrapper.cpp) - 8 JNA functions
- Build script that downloads RE2/Abseil and compiles statically
- Dockerfile for reproducible Linux builds

How It Works:
1. Manually trigger 'Build Native Libraries' workflow in GitHub Actions
2. Workflow builds for all platforms in parallel (~10-15 min)
3. Workflow creates branch 'native-libs-YYYYMMDD-HHMMSS'
4. Workflow commits binaries to src/main/resources/native/{platform}/
5. Workflow opens PR for review
6. Merge PR -> binaries are in repo
7. Java developers just pull and build - no C++ compilation needed

Target Platforms:
- darwin-x86_64 (macOS Intel)
- darwin-aarch64 (macOS Apple Silicon)
- linux-x86_64 (Linux x86_64)
- linux-aarch64 (Linux ARM64)

Tested Locally:
- macOS ARM64 build: VERIFIED
- Linux ARM64 via Podman: VERIFIED
- Linux x86_64 via Podman: VERIFIED

Next: Push to GitHub and trigger workflow to build all platforms

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,11 @@ build/
 
 # ===== NATIVE LIBRARY COMPILATION =====
 
-# Don't commit compiled native libraries
+# EXCEPT: Allow compiled libraries in resources (these go in the JAR)
+!src/main/resources/native/**/libre2.so
+!src/main/resources/native/**/libre2.dylib
+
+# Don't commit compiled native libraries (build artifacts)
 *.so
 *.dylib
 *.dll
