Use environment variables for all version information
All version info now from GitHub 'native-builds' environment:
- RE2_COMMIT (commit hash)
- RE2_RELEASE_VERSION (e.g., 2025-11-05)
- ABSEIL_COMMIT (commit hash)
- ABSEIL_RELEASE_VERSION (e.g., 20250814.1)

Benefits:
- No hardcoded versions anywhere in code
- Single source of truth in protected environment
- Prevents confusion from outdated hardcoded values
- Centralized version management

Build script validates all 4 vars are set before proceeding.

--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -48,7 +48,9 @@ jobs:
       - name: Build RE2 wrapper
         env:
           RE2_COMMIT: ${{ vars.RE2_COMMIT }}
+          RE2_RELEASE_VERSION: ${{ vars.RE2_RELEASE_VERSION }}
           ABSEIL_COMMIT: ${{ vars.ABSEIL_COMMIT }}
+          ABSEIL_RELEASE_VERSION: ${{ vars.ABSEIL_RELEASE_VERSION }}
         run: |
           cd native
           ./scripts/build.sh
@@ -100,7 +102,9 @@ jobs:
       - name: Build RE2 wrapper
         env:
           RE2_COMMIT: ${{ vars.RE2_COMMIT }}
+          RE2_RELEASE_VERSION: ${{ vars.RE2_RELEASE_VERSION }}
           ABSEIL_COMMIT: ${{ vars.ABSEIL_COMMIT }}
+          ABSEIL_RELEASE_VERSION: ${{ vars.ABSEIL_RELEASE_VERSION }}
         run: |
           cd native
           ./scripts/build.sh
