Ensure jq installed everywhere, remove grep fallback
Changes:
- macOS: Install jq via brew on both runners
- Linux: Add jq to Dockerfile apt-get install
- Build script: Use only jq (removed grep fallback)
- Simpler, more reliable JSON parsing

jq usage:
- Properly extracts .commit.verification.verified field
- Returns empty if field missing (not an error)
- Clean, readable code

--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -41,9 +41,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          # CMake should already be installed on GitHub macOS runners
-          # but let's verify
+          # Install jq for JSON parsing (signature verification)
+          brew install jq
+
+          # Verify cmake is available
           cmake --version
+          jq --version
 
       - name: Build RE2 wrapper
         env:
@@ -97,7 +100,12 @@ jobs:
 
       - name: Install dependencies
         run: |
+          # Install jq for JSON parsing (signature verification)
+          brew install jq
+
+          # Verify tools are available
           cmake --version
+          jq --version
 
       - name: Build RE2 wrapper
         env:
