Add comprehensive licensing and attribution
- Create NOTICE file with RE2 attribution
- Create THIRD_PARTY_LICENSES.md with RE2 BSD-3-Clause, Abseil Apache 2.0
- Add Apache 2.0 license headers to all 15 Java source files
- Update pom.xml with developers and scm sections
- Update README.md with license badge and detailed license section
- Create src/main/resources/native/README.md with native binary attribution
- Document license compatibility and distribution requirements

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,21 @@
         </license>
     </licenses>
 
+    <developers>
+        <developer>
+            <id>axonops</id>
+            <name>AxonOps Team</name>
+            <organization>AxonOps</organization>
+            <organizationUrl>https://axonops.com</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>https://github.com/axonops/libre2-java</url>
+        <connection>scm:git:git://github.com/axonops/libre2-java.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/axonops/libre2-java.git</developerConnection>
+    </scm>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
