Add Rocky Linux 9 testing for RHEL compatibility
Expand test matrix from 4 to 6 platforms:
- macOS x86_64 (Intel)
- macOS aarch64 (Apple Silicon)
- Linux Ubuntu 22.04 x86_64 (Debian-based)
- Linux Ubuntu 22.04 aarch64 (Debian-based ARM64)
- Linux Rocky 9 x86_64 (RHEL-based)
- Linux Rocky 9 aarch64 (RHEL-based ARM64)

This ensures compatibility with both major Linux distribution
families (Debian and RHEL) across both architectures.

--- a/.github/workflows/test-platforms.yml
+++ b/.github/workflows/test-platforms.yml
@@ -149,11 +149,11 @@ jobs:
           echo "✅ Tests passed on darwin-aarch64"
 
   # ============================================================================
-  # Linux Tests
+  # Linux Tests (Debian-based: Ubuntu 22.04)
   # ============================================================================
 
-  test-linux-x86_64:
-    name: Test Linux x86_64
+  test-linux-ubuntu-x86_64:
+    name: Test Linux Ubuntu 22.04 x86_64
     needs: build-jar
     runs-on: ubuntu-latest
 
@@ -184,10 +184,57 @@ jobs:
 
       - name: Verify platform detection
         run: |
-          echo "✅ Tests passed on linux-x86_64"
+          echo "✅ Tests passed on Ubuntu 22.04 linux-x86_64"
 
-  test-linux-aarch64:
-    name: Test Linux aarch64 (ARM64)
+  # ============================================================================
+  # Linux Tests (RHEL-based: Rocky Linux 9)
+  # ============================================================================
+
+  test-linux-rocky-x86_64:
+    name: Test Linux Rocky 9 x86_64
+    needs: build-jar
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code (for tests)
+        uses: actions/checkout@v4
+
+      - name: Download JAR artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: libre2-java-jar
+          path: target/
+
+      - name: Test in Rocky Linux container
+        run: |
+          # Run tests in Rocky Linux 9 container with JDK 17
+          docker run --rm \
+            -v "$(pwd):/workspace" \
+            -w /workspace \
+            rockylinux:9 \
+            bash -c "
+              # Install JDK 17
+              dnf install -y java-17-openjdk java-17-openjdk-devel unzip
+
+              # Set JAVA_HOME
+              export JAVA_HOME=/usr/lib/jvm/java-17-openjdk
+              export PATH=\$JAVA_HOME/bin:\$PATH
+
+              # Verify Java
+              java -version
+
+              # Verify native library in JAR
+              echo 'Checking linux-x86_64 library in JAR:'
+              unzip -l target/libre2-java-*.jar | grep 'linux-x86_64/libre2.so'
+
+              # Run tests
+              ./mvnw test -B
+
+              echo '✅ Tests passed on Rocky Linux 9 x86_64'
+            "
+
+  test-linux-ubuntu-aarch64:
+    name: Test Linux Ubuntu 22.04 aarch64 (ARM64)
     needs: build-jar
     runs-on: ubuntu-latest
 
@@ -206,9 +253,9 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Verify and test in ARM64 container
+      - name: Test in Ubuntu ARM64 container
         run: |
-          # Run tests in ARM64 Docker container with JDK 17
+          # Run tests in Ubuntu ARM64 Docker container with JDK 17
           docker run --rm --platform linux/arm64 \
             -v "$(pwd):/workspace" \
             -w /workspace \
@@ -221,7 +268,55 @@ jobs:
               # Run tests
               ./mvnw test -B
 
-              echo '✅ Tests passed on linux-aarch64'
+              echo '✅ Tests passed on Ubuntu 22.04 linux-aarch64'
+            "
+
+  test-linux-rocky-aarch64:
+    name: Test Linux Rocky 9 aarch64 (ARM64)
+    needs: build-jar
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code (for tests)
+        uses: actions/checkout@v4
+
+      - name: Download JAR artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: libre2-java-jar
+          path: target/
+
+      - name: Set up QEMU for ARM64
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
+      - name: Test in Rocky Linux ARM64 container
+        run: |
+          # Run tests in Rocky Linux 9 ARM64 container with JDK 17
+          docker run --rm --platform linux/arm64 \
+            -v "$(pwd):/workspace" \
+            -w /workspace \
+            rockylinux:9 \
+            bash -c "
+              # Install JDK 17
+              dnf install -y java-17-openjdk java-17-openjdk-devel unzip
+
+              # Set JAVA_HOME
+              export JAVA_HOME=/usr/lib/jvm/java-17-openjdk
+              export PATH=\$JAVA_HOME/bin:\$PATH
+
+              # Verify Java
+              java -version
+
+              # Verify native library in JAR
+              echo 'Checking linux-aarch64 library in JAR:'
+              unzip -l target/libre2-java-*.jar | grep 'linux-aarch64/libre2.so'
+
+              # Run tests
+              ./mvnw test -B
+
+              echo '✅ Tests passed on Rocky Linux 9 aarch64'
             "
 
   # ============================================================================
@@ -230,7 +325,7 @@ jobs:
 
   all-platforms-tested:
     name: All Platforms Tested
-    needs: [test-macos-x86_64, test-macos-aarch64, test-linux-x86_64, test-linux-aarch64]
+    needs: [test-macos-x86_64, test-macos-aarch64, test-linux-ubuntu-x86_64, test-linux-rocky-x86_64, test-linux-ubuntu-aarch64, test-linux-rocky-aarch64]
     runs-on: ubuntu-latest
 
     steps:
@@ -241,7 +336,9 @@ jobs:
           echo "Verified platforms:"
           echo "  - macOS x86_64 (Intel)"
           echo "  - macOS aarch64 (Apple Silicon)"
-          echo "  - Linux x86_64"
-          echo "  - Linux aarch64 (ARM64)"
+          echo "  - Linux Ubuntu 22.04 x86_64 (Debian-based)"
+          echo "  - Linux Ubuntu 22.04 aarch64 (Debian-based ARM64)"
+          echo "  - Linux Rocky 9 x86_64 (RHEL-based)"
+          echo "  - Linux Rocky 9 aarch64 (RHEL-based ARM64)"
           echo ""
           echo "All native libraries load and function correctly!"
